Styled HTML pages for Project Explorer in Bootstrap

--- a/app/public/project-explorer/css/style.css
+++ b/app/public/project-explorer/css/style.css
@@ -22,6 +22,9 @@
   .jumbotron-heading {
     font-weight: 300;
   }
+  .form-group{
+    margin-right: 30px;
+  }
   
   .jumbotron .container {
     max-width: 40rem;
